--- a/404.html
+++ b/404.html
@@ -17,12 +17,12 @@
           <p class="error404__container--title animated bounce">
             404 
           </p>
-          <p class="error404__container--subtitle">Página no encontrada</p>
+          <p class="error404__container--subtitle">Página NO encontrada</p>
         </section>
   </section>
   <footer class="footer">
     <a  href="/">Terms of Use</a>
-    <a  href="/">Policy Privacity </a>
+    <a  href="/">Policy Privacity </a>  
     <a  href="/">Support</a>
   </footer>
 </body>
